Various scrollbox and tabbrowser bug fixes and improvements. Including: bug 342890 - make tab minWidth 125px and heed the browser.tabs.tabMinWidth hidden pref. bug 342906 - Tab Overflow Scroll:  Clicking and holding the button should scroll continuously. bug 343019 and bug 343370 - Tab scrolling does not handle window resize and underflow well. bug 342841 - Scrolling arrow should look disabled when you can't scroll in its direction. bug 343097 - Cleaner arrowscrollbox-clicktoscroll binding (this also partly fixes bug 342909 - Scroll buttons do not have button-like appearance, look like static icons and offer no feedback). Work by Seth Spitzer and me; reviews by me, sspitzer and mconnor. a=mconnor, mtschrep. The complete branch patch is on bug 318168.

--- a/mozilla/toolkit/content/xul.css
+++ b/mozilla/toolkit/content/xul.css
@@ -914,6 +914,10 @@ arrowscrollbox {
   -moz-binding: url("chrome://global/content/bindings/scrollbox.xml#arrowscrollbox");
 }
 
+arrowscrollbox[clicktoscroll="true"] {
+  -moz-binding: url("chrome://global/content/bindings/scrollbox.xml#arrowscrollbox-clicktoscroll");
+}
+
 autorepeatbutton {
   -moz-binding: url("chrome://global/content/bindings/scrollbox.xml#autorepeatbutton");
 }
