--- a/mozilla/toolkit/themes/pinstripe/global/scrollbox.css
+++ b/mozilla/toolkit/themes/pinstripe/global/scrollbox.css
@@ -1,27 +1,65 @@
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
 /*
- * Autorepeatbutton
+ * Scroll arrows
  */
-.autorepeatbutton-up
+ 
+/* Horizontal enabled */
+.autorepeatbutton-up[orient="horizontal"],
+.scrollbutton-up[orient="horizontal"]
  {
    list-style-image      : url("chrome://global/skin/arrow/arrow-lft-sharp.gif");
  }
  
-.autorepeatbutton-down
+.autorepeatbutton-down[orient="horizontal"],
+.scrollbutton-down[orient="horizontal"]
   {
     list-style-image     : url("chrome://global/skin/arrow/arrow-rit-sharp.gif");
   }
 
-.autorepeatbutton-up[orient="vertical"]
+/* Horizontal disabled */
+.autorepeatbutton-up[orient="horizontal"][disabled="true"],
+.scrollbutton-up[orient="horizontal"][disabled="true"]
+ {
+   list-style-image      : url("chrome://global/skin/arrow/arrow-lft-dis.gif");
+ }
+ 
+.autorepeatbutton-down[orient="horizontal"][disabled="true"],
+.scrollbutton-down[orient="horizontal"][disabled="true"]
+  {
+    list-style-image     : url("chrome://global/skin/arrow/arrow-rit-dis.gif");
+  }
+
+/* Vertical enabled */
+.autorepeatbutton-up,
+.scrollbutton-up
  {
    list-style-image      : url("chrome://global/skin/arrow/arrow-up-sharp.gif");
  }
  
-.autorepeatbutton-down[orient="vertical"]
+.autorepeatbutton-down,
+.scrollbutton-down
   {
     list-style-image     : url("chrome://global/skin/arrow/arrow-dn-sharp.gif");
   }
+
+/* Vertical disabled */
+.autorepeatbutton-up[disabled="true"],
+.scrollbutton-up[disabled="true"]
+ {
+   list-style-image      : url("chrome://global/skin/arrow/arrow-up-dis.gif");
+ }
+ 
+.autorepeatbutton-down[disabled="true"],
+.scrollbutton-down[disabled="true"]
+  {
+    list-style-image     : url("chrome://global/skin/arrow/arrow-dn-dis.gif");
+  }
+
+.scrollbutton-up > .toolbarbutton-text,
+.scrollbutton-down > .toolbarbutton-text {
+  display: none;
+}
 
 autorepeatbutton
   {
@@ -30,4 +68,3 @@ autorepeatbutton
     margin               : 1px 2px 2px 1px;
     padding              : 4px;
   }
-
