--- a/mozilla/toolkit/themes/winstripe/global/scrollbox.css
+++ b/mozilla/toolkit/themes/winstripe/global/scrollbox.css
@@ -1,34 +1,85 @@
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
 /*
- * Autorepeatbutton
+ * Scroll arrows
  */
-.autorepeatbutton-up, .autorepeatbutton-down[chromedir="rtl"]
+
+/* Horizonal enabled */
+.autorepeatbutton-up[orient="horizontal"],
+.autorepeatbutton-down[chromedir="rtl"][orient="horizontal"],
+.scrollbutton-up[orient="horizontal"],
+.scrollbutton-down[chromedir="rtl"][orient="horizontal"]
   {
     list-style-image      : url("chrome://global/skin/arrow/arrow-lft.gif");
     -moz-image-region     : auto; /* cut off inheritance */
   }
 
-.autorepeatbutton-down, .autorepeatbutton-up[chromedir="rtl"]
+.autorepeatbutton-down[orient="horizontal"],
+.autorepeatbutton-up[chromedir="rtl"][orient="horizontal"],
+.scrollbutton-down[orient="horizontal"],
+.scrollbutton-up[chromedir="rtl"][orient="horizontal"]
   {
     list-style-image      : url("chrome://global/skin/arrow/arrow-rit.gif");
     -moz-image-region     : auto; /* cut off inheritance */
   }
 
-.autorepeatbutton-up[orient="vertical"]
+ /* Horizonal disabled */
+.autorepeatbutton-up[orient="horizontal"][disabled="true"],
+.autorepeatbutton-down[chromedir="rtl"][orient="horizontal"][disabled="true"],
+.scrollbutton-up[orient="horizontal"][disabled="true"],
+.scrollbutton-down[chromedir="rtl"][orient="horizontal"][disabled="true"]
+  {
+    list-style-image      : url("chrome://global/skin/arrow/arrow-lft-dis.gif");
+    -moz-image-region     : auto; /* cut off inheritance */
+  }
+
+.autorepeatbutton-down[orient="horizontal"][disabled="true"],
+.autorepeatbutton-up[chromedir="rtl"][orient="horizontal"][disabled="true"],
+.scrollbutton-down[orient="horizontal"][disabled="true"],
+.scrollbutton-up[chromedir="rtl"][orient="horizontal"][disabled="true"]
+  {
+    list-style-image      : url("chrome://global/skin/arrow/arrow-rit-dis.gif");
+    -moz-image-region     : auto; /* cut off inheritance */
+  }
+
+/* Vertical enabled */
+.autorepeatbutton-up,
+.scrollbutton-up
   {
     list-style-image      : url("chrome://global/skin/arrow/arrow-up.gif");
     -moz-image-region     : auto; /* cut off inheritance */
   }
 
-.autorepeatbutton-down[orient="vertical"]
+.autorepeatbutton-down,
+.scrollbutton-down
   {
     list-style-image      : url("chrome://global/skin/arrow/arrow-dn.gif");
     -moz-image-region     : auto; /* cut off inheritance */
   }
 
+/* Vertical disabled */
+.autorepeatbutton-up[disabled="true"],
+.scrollbutton-up[disabled="true"]
+  {
+    list-style-image      : url("chrome://global/skin/arrow/arrow-up-dis.gif");
+    -moz-image-region     : auto; /* cut off inheritance */
+  }
+
+.autorepeatbutton-down[disabled="true"],
+.scrollbutton-down[disabled="true"]
+  {
+    list-style-image      : url("chrome://global/skin/arrow/arrow-dn-dis.gif");
+    -moz-image-region     : auto; /* cut off inheritance */
+  }
+
+.scrollbutton-up > .toolbarbutton-text,
+.scrollbutton-down > .toolbarbutton-text {
+  display: none;
+}
+
 autorepeatbutton,
-autorepeatbutton[clicktoscroll="true"]:hover
+.scrollbutton-up,
+.scrollbutton-down
   {
     -moz-box-align        : center;
     -moz-box-pack         : center;
